# worktree-runner

./: .cursorrules  .gitignore  .wt.yaml  COMPARISON.md  LIMITATIONS.md  README.md  pyproject.toml
.github/workflows/: docs-assets.yml  test.yml
scripts/: optimise-images.sh
src/wt/: __init__.py
src/wt/skills/init-wt/: SKILL.md
tests/: conftest.py  test_add.py  test_commands.py  test_config.py  test_passthrough.py  test_pid_guard.py  test_resolution.py  test_state.py  test_status_scope.py  test_sweep.py  test_ticket_styles.py  test_tree.py
