[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wt-dispatcher"
version = "0.1.0"
description = "Git-worktree dispatcher with per-repo .wt.yaml config and service groups"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Alexander Obuschenko"}]
dependencies = ["pyyaml>=5.0"]
keywords = ["git", "worktree", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/mutexre/worktree-runner"
Issues = "https://github.com/mutexre/worktree-runner/issues"

[project.scripts]
wt = "wt:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wt = ["skills/**/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
